--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "back-end"
   ],
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
     "mongoose": "^5.9.7"
