--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^4.0.1",
     "dotenv": "^8.2.0",
     "graphql-yoga": "^1.18.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
